--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.3",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
+    "xgplayer": "^2.30.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
